@@ -1,6 +1,9 @@
 <html>
 <head>
   <title>Welcome to Solr</title>
+  <style type="text/css">
+    body { font-family: serif; }
+  </style>
 </head>
 <body>
 <p>
@@ -10,4 +13,7 @@
 <div>Here is some text in a div</div>
 <div>This has a <a href="http://www.apache.org">link</a>.</div>
 </body>
+<script>
+  document.getElementById("div").blur();
+</script>
 </html>
